Updated to not return full history by default.
